Fixed fancybox console error on mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10430,3 +10430,9 @@ ul.pager {
     margin-bottom: 6px;
   }
 }
+/* Fixes fancybox console error on mobile */
+.fancybox-container,
+.fancybox-image,
+.fancybox-spaceball {
+  touch-action: manipulation;
+}
