--- a/src/css/less/_custom.less
+++ b/src/css/less/_custom.less
@@ -2543,3 +2543,9 @@ ul.pager {
         margin-bottom: 6px;
     }
 }
+
+/* Fixes fancybox console error on mobile */
+
+.fancybox-container, .fancybox-image, .fancybox-spaceball {
+    touch-action: manipulation;
+}
